--- a/index.html
+++ b/index.html
@@ -248,10 +248,33 @@
        </div>
 
     </div>
+    <div class="seemore">
+        <a href="">See More <i class="fas fa-arrow-right"></i></a>
+    </div>
 </section>
 
+ <!-- ***********Popular collection part End*********** -->
 
 
-       <!-- ***********Company logo part End*********** -->
+ <!-- ***********Sign Up  part End*********** -->
+
+ <section class="container">
+     <div class="sign-up">
+         <h2 class="title">Sign Up for Ecommerce Marketing influencer</h2>
+         <form action="">
+             <label for="Email">
+                 <input type="email" name="Email" id="Email" placeholder="Enter your Email">
+             </label>
+             <label for="password">
+                 <input type="password" name="password" id="password" placeholder="Enter your Password">
+             </label>
+            <div> <button  class="btn" type="submit">Sign Up</button></div>
+             
+         </form>
+     </div>
+ </section>
+ <!-- **************Sign Up part End*********** -->
+
+
   </body>
 </html>
