--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <i class="fa fa-star filled"></i>
             <i class="fa fa-star filled"></i>
             <i class="fa fa-star filled"></i>
-            <i class="fa fa-star filled"></i>
+            <i class="fa fa-star "></i>
             <i class="fa fa-star "></i>
             <p>4.99</p>
         </div>
@@ -150,7 +150,7 @@
             <i class="fa fa-star filled"></i>
             <i class="fa fa-star filled"></i>
             <i class="fa fa-star "></i>
-            <p>4.99</p>
+            <p>4.89</p>
         </div>
         <p class="card-info">Worldwide shifting</p>
         <p class="card-info">available</p>
@@ -166,9 +166,9 @@
             <i class="fa fa-star filled"></i>
             <i class="fa fa-star filled"></i>
             <i class="fa fa-star filled"></i>
-            <i class="fa fa-star filled"></i>
             <i class="fa fa-star "></i>
-            <p>4.99</p>
+            <i class="fa fa-star "></i>
+            <p>4.58</p>
         </div>
         <p class="card-info">Worldwide shifting</p>
         <p class="card-info">available</p>
@@ -184,9 +184,9 @@
             <i class="fa fa-star filled"></i>
             <i class="fa fa-star filled"></i>
             <i class="fa fa-star filled"></i>
-            <i class="fa fa-star filled"></i>
             <i class="fa fa-star "></i>
-            <p>4.99</p>
+            <i class="fa fa-star "></i>
+            <p>4.91</p>
         </div>
         <p class="card-info">Worldwide shifting</p>
         <p class="card-info">available</p>
@@ -220,9 +220,9 @@
             <i class="fa fa-star filled"></i>
             <i class="fa fa-star filled"></i>
             <i class="fa fa-star filled"></i>
-            <i class="fa fa-star filled"></i>
             <i class="fa fa-star "></i>
-            <p>4.99</p>
+            <i class="fa fa-star "></i>
+            <p>4.50</p>
         </div>
         <p class="card-info">Worldwide shifting</p>
         <p class="card-info">available</p>
@@ -268,12 +268,27 @@
              <label for="password">
                  <input type="password" name="password" id="password" placeholder="Enter your Password">
              </label>
-            <div> <button  class="btn" type="submit">Sign Up</button></div>
+            <div id="btn"> <button  class="btn" type="submit">Sign Up <i class="fas fa-arrow-right"></i></button></div>
              
          </form>
      </div>
  </section>
  <!-- **************Sign Up part End*********** -->
+ <!-- **************Footer style part Start*********** -->
+
+ <footer>
+     <h2>Influencer Products</h2>
+     <p class="footer-detail">Copyright &copy;2020 influencer products</p>
+     <p class="footer-detail">All rights reserved</p>
+     <div class="social-icons">
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-youtube"></i>
+     </div>
+ </footer>
+ <!-- **************Footer style part End*********** -->
+ 
 
 
   </body>
